crates/solidity/testing/snapshots/bindings_output/errors/revert_stmt/generated/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected Equal or Semicolon.
   ╭─[ input.sol:2:23 ]
   │
 2 │     error InvalidState();
   │                       ─┬  
   │                        ╰── Error occurred here.
───╯
Error: Expected Equal or Semicolon.
   ╭─[ input.sol:5:28 ]
   │
 5 │         revert InvalidState();
   │                            ─┬  
   │                             ╰── Error occurred here.
───╯
Error: Expected Equal or Semicolon.
    ╭─[ input.sol:10:21 ]
    │
 10 │         revert Utils.GenericError(code);
    │                     ─────────┬─────────  
    │                              ╰─────────── Error occurred here.
────╯
Error: Expected Equal or Semicolon.
    ╭─[ input.sol:15:23 ]
    │
 15 │     error GenericError(int code);
    │                       ─────┬────  
    │                            ╰────── Error occurred here.
────╯
[39mReferences and definitions:[0m 
    ╭─[ input.sol:1:1 ]
    │
  1 │ contract Test {
    │          ──┬─  
    │            ╰─── name: 1
  2 │     error InvalidState();
    │           ──────┬─────  
    │                 ╰─────── name: 2
    │ 
  4 │     function testRevert() public {
    │              ─────┬────  
    │                   ╰────── name: 3
  5 │         revert InvalidState();
    │                ──────┬─────  
    │                      ╰─────── name: 4
    │ 
  8 │     function testOtherRevert() public {
    │              ───────┬───────  
    │                     ╰───────── name: 5
  9 │         int code = 10;
    │             ──┬─  
    │               ╰─── name: 6
 10 │         revert Utils.GenericError(code);
    │                ──┬──  
    │                  ╰──── name: 7
    │ 
 14 │ library Utils {
    │         ──┬──  
    │           ╰──── name: 8
 15 │     error GenericError(int code);
    │           ──────┬─────  
    │                 ╰─────── name: 9
    │
    ├─[ input.sol:1:1 ]
    │
  2 │     error InvalidState();
    │     ──┬──  
    │       ╰──── unresolved
    │ 
  5 │         revert InvalidState();
    │         ───┬──  
    │            ╰──── ref: built-in
    │ 
 10 │         revert Utils.GenericError(code);
    │         ───┬──  
    │            ╰──── ref: built-in
    │ 
 15 │     error GenericError(int code);
    │     ──┬──  
    │       ╰──── unresolved
────╯
[39mDefiniens:[0m 
    ╭─[ input.sol:1:1 ]
    │
  1 │ ╭─▶ contract Test {
    ┆ ┆   
 12 │ ├─▶ }
    │ │       
    │ ╰─────── definiens: 1
    │
    ├─[ input.sol:1:1 ]
    │
  2 │ │       error InvalidState();
    │ │   ─────────────┬────────────  
    │ │                ╰────────────── definiens: 2
  3 │ ╭─▶ 
    ┆ ┆   
  6 │ ├─▶     }
    │ │           
    │ ╰─────────── definiens: 3
    │
    ├─[ input.sol:1:1 ]
    │
  5 │             revert InvalidState();
    │     ───────────────┬───────────────  
    │                    ╰───────────────── definiens: 4
    │ 
  7 │ ╭─▶ 
    ┆ ┆   
 11 │ ├─▶     }
    │ │           
    │ ╰─────────── definiens: 5
    │
    ├─[ input.sol:1:1 ]
    │
  9 │             int code = 10;
    │     ───────────┬───────────  
    │                ╰───────────── definiens: 6
 10 │             revert Utils.GenericError(code);
    │     ────────────────────┬────────────────────  
    │                         ╰────────────────────── definiens: 7
    │ 
 13 │ ╭─▶ 
    ┆ ┆   
 16 │ ├─▶ }
    │ │       
    │ ╰─────── definiens: 8
    │
    ├─[ input.sol:1:1 ]
    │
 15 │     error GenericError(int code);
    │ ─────────────────┬────────────────  
    │                  ╰────────────────── definiens: 9
────╯
